<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res-auto"
   android:key="main_settings_screen">

  <PreferenceCategory
     android:title="@string/look_and_feel">

    <SwitchPreference
       android:key="show_time_when_running"
       android:title="@string/show_time_when_running"
       android:defaultValue="@bool/show_time_when_running"/>

    <SwitchPreference
       android:key="keep_timer_screen_on"
       android:title="@string/keep_screen_on"
       android:summary="@string/keep_screen_on_summary"
       android:defaultValue="@bool/keep_timer_screen_on"/>

    <com.cube.nanotimer.gui.widget.preferences.TimerFontListPreference
       android:key="timer_font"
       android:title="@string/timer_font"
       android:summary="%s"
       android:entries="@array/entries_timer_font"
       android:entryValues="@array/entryvalues_timer_font"
       android:dialogTitle="@string/timer_font"
       android:defaultValue="1"/>

    <ListPreference
       android:key="timer_font_size"
       android:title="@string/timer_font_size"
       android:summary="%s"
       android:entries="@array/entries_timer_font_size"
       android:entryValues="@array/entryvalues_timer_font_size"
       android:dialogTitle="@string/timer_font_size"
       android:defaultValue="2"/>

    <com.cube.nanotimer.gui.widget.preferences.NumberEntryDialog
       android:key="color_sample_size"
       android:title="@string/color_sample_size"
       android:summary="@string/color_sample_size_summary"
       custom:min="10"
       custom:step="10"
       custom:presets="@array/presets_color_sample_size"
       custom:unit="@string/solves"
       android:defaultValue="@integer/color_sample_size"
       custom:defaultVal="@integer/color_sample_size"/>

    <ListPreference
       android:key="state_preview"
       android:title="@string/state_preview"
       android:summary="@string/state_preview_summary"
       android:entries="@array/entries_state_preview"
       android:entryValues="@array/entryvalues_state_preview"
       android:dialogTitle="@string/state_preview"
       android:defaultValue="1"/>

    <ListPreference
       android:key="session_times_display"
       android:title="@string/session_times_display"
       android:summary="@string/session_times_display_summary"
       android:entries="@array/entries_session_times_display"
       android:entryValues="@array/entryvalues_session_times_display"
       android:dialogTitle="@string/session_times_display"
       android:defaultValue="1"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/timer_screen">

    <ListPreference
       android:key="inspection_mode"
       android:title="@string/inspection_mode"
       android:entries="@array/entries_inspection_modes"
       android:entryValues="@array/entryvalues_inspection_modes"
       android:dialogTitle="@string/inspection_mode"
       android:defaultValue="2"/>

    <com.cube.nanotimer.gui.widget.preferences.NumberEntryDialog
       android:key="inspection_time"
       android:title="@string/inspection_time"
       android:defaultValue="@integer/inspection_time"
       custom:min="0"
       custom:max="600"
       custom:presets="@array/presets_inspection_time"
       custom:unit="@string/seconds"
       custom:defaultVal="@integer/inspection_time"/>

    <SwitchPreference
       android:key="inspection_sounds"
       android:title="@string/inspection_sounds"
       android:defaultValue="@bool/inspection_sounds"/>

    <ListPreference
       android:key="inspection_sounds_type"
       android:title="@string/inspection_sounds_type"
       android:summary="%s"
       android:entries="@array/entries_inspection_sounds_type"
       android:entryValues="@array/entryvalues_inspection_sounds_type"
       android:dialogTitle="@string/inspection_sounds_type"
       android:defaultValue="1"/>

    <SwitchPreference
       android:key="high_precision_timer"
       android:title="@string/high_precision_timer"
       android:summary="@string/high_precision_timer_summary"
       android:defaultValue="@bool/high_precision_timer"/>

    <ListPreference
       android:key="record_notification_mode"
       android:title="@string/record_notification_mode"
       android:summary="%s"
       android:entries="@array/entries_record_notification"
       android:entryValues="@array/entryvalues_record_notification"
       android:dialogTitle="@string/record_notification_mode"
       android:defaultValue="@integer/record_notification_mode"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/solve_types">

    <!-- Started from code: an <intent> here would have to name the package, and the debug build's
         is suffixed. -->
    <Preference
       android:key="edit_solve_types"
       android:title="@string/edit_solve_types"
       android:summary="@string/edit_solve_types_summary"/>

    <SwitchPreference
       android:key="solve_types_shortcut"
       android:title="@string/solve_types_shortcut"
       android:summary="@string/solve_types_shortcut_summary"
       android:defaultValue="@bool/solve_types_shortcut"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:key="smart_cube_category"
     android:title="@string/smart_cube_title">

    <ListPreference
       android:key="smart_cube_method"
       android:title="@string/preferred_method"
       android:summary="@string/preferred_method_summary"
       android:entries="@array/entries_cube_method"
       android:entryValues="@array/entryvalues_cube_method"
       android:dialogTitle="@string/preferred_method"
       android:defaultValue="CFOP"/>

    <SwitchPreference
       android:key="smart_cube_auto_stop"
       android:title="@string/smart_cube_auto_stop"
       android:summary="@string/smart_cube_auto_stop_summary"
       android:defaultValue="@bool/smart_cube_auto_stop"/>

    <SwitchPreference
       android:key="smart_cube_auto_penalty"
       android:title="@string/smart_cube_auto_penalty"
       android:summary="@string/smart_cube_auto_penalty_summary"
       android:defaultValue="@bool/smart_cube_auto_penalty"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:title="@string/scrambles">

    <ListPreference
       android:key="big_cubes_notation"
       android:title="@string/big_cubes_notation"
       android:summary="@string/big_cubes_notation_summary"
       android:entries="@array/entries_big_cubes_notation"
       android:entryValues="@array/entryvalues_big_cubes_notation"
       android:dialogTitle="@string/big_cubes_notation"
       android:defaultValue="@integer/big_cubes_notation"/>

    <ListPreference
       android:key="clock_notation"
       android:title="@string/clock_notation"
       android:summary="@string/clock_notation_summary"
       android:entries="@array/entries_clock_notation"
       android:entryValues="@array/entryvalues_clock_notation"
       android:dialogTitle="@string/clock_notation"
       android:defaultValue="@integer/clock_notation"/>

  </PreferenceCategory>

  <PreferenceCategory
     android:key="history"
     android:title="@string/history">

    <com.cube.nanotimer.gui.widget.preferences.ClearHistoryDialog
       android:title="@string/clear_history"
       android:summary="@string/clear_all_history"
       android:dialogMessage="@string/clear_all_history_confirmation"
       android:positiveButtonText="@string/yes"
       android:negativeButtonText="@string/no"/>

  </PreferenceCategory>

</PreferenceScreen>
