<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">

  <!-- First on the right, as on the history screen. SmartCubeChip takes this item away entirely
       when no cube is connected: here it would only be a way in to pairing one mid solve. -->
  <item android:id="@+id/itSmartCube"
     android:title="@string/smart_cube_title"
     app:actionLayout="@layout/smart_cube_chip"
     app:showAsAction="always"/>

  <!-- No showAsAction here: the solve type picks which item goes to the action bar, and
       TimerActivity promotes it (and swaps this one's icon when it is the chosen one). -->
  <item android:id="@+id/itScrambleView"
    android:icon="@drawable/ic_menu_scramble_view"
    android:title="@string/scramble_view"/>

  <item android:id="@+id/itPlusTwo"
    android:icon="@drawable/ic_menu_plus_two"
    android:title="@string/add_penalty"/>

  <item android:id="@+id/itDNF"
    android:icon="@drawable/ic_menu_dnf"
    android:title="@string/DNF"/>

  <item android:id="@+id/itDelete"
    android:icon="@drawable/ic_menu_delete"
    android:title="@string/delete"/>

  <item android:id="@+id/itLastSolve"
    android:icon="@drawable/ic_menu_last_solve"
    android:title="@string/last_solve"/>

  <item android:id="@+id/itSessionDetails"
     android:icon="@drawable/ic_menu_session_details"
     android:title="@string/session_details"/>

  <item android:id="@+id/itNewSession"
    android:icon="@drawable/ic_menu_new_session"
    android:title="@string/new_session"/>

  <item android:id="@+id/itAddTime"
     android:icon="@drawable/ic_menu_add_time"
     android:title="@string/add_time"/>

  <item android:id="@+id/itCrossSolver"
     android:icon="@drawable/ic_menu_cross_solver"
     android:title="@string/cross_solver"/>

</menu>
