<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/itSmartCube"
     android:title="@string/smart_cube_title"
     app:actionLayout="@layout/smart_cube_chip"
     app:showAsAction="always"/>

  <item android:id="@+id/itDrill"
     android:title="@string/drill_title"
     android:icon="@drawable/ic_menu_drill"
     app:showAsAction="always"/>

  <item android:id="@+id/itHistoryHelp"
     android:title="@string/history_help_title"
     android:icon="@drawable/ic_help_outline"
     app:showAsAction="always"/>

  <item android:id="@+id/itAppIcon"
     android:title="@string/app_name"
     android:icon="@drawable/app_icon_cube"
     app:showAsAction="always"/>

</menu>