<?xml version="1.0" encoding="utf-8"?>
<!-- The cube chip, then the figures every drill so far adds up to, then the ? that carries what
     the screen used to say in grey paragraphs above Start. The chip is here because this screen
     asks for a cube it gave no way to connect. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/itSmartCube"
     android:title="@string/smart_cube_title"
     app:actionLayout="@layout/smart_cube_chip"
     app:showAsAction="always"/>

  <!-- What every drill so far added up to. Reached from here because this is where a drill is
       chosen: what to practise next is exactly what the figures answer. -->
  <item android:id="@+id/itDrillStats"
     android:icon="@drawable/ic_menu_drill_stats"
     android:title="@string/drill_stats_title"
     app:showAsAction="always"/>

  <item android:id="@+id/itDrillHelp"
     android:icon="@drawable/ic_help_outline"
     android:title="@string/drill_help_title"
     app:showAsAction="always"/>

</menu>
